Revision history for AnyEvent::IRC

0.95
        - implemented send_long_message.
        - added send_initial_whois option to ::Client constructor.
        - added dependency to Encode.
        - fixed a bug in ident handling, it now also detects nick changes.

0.9     Mon Sep 28 14:51:29 CEST 2009
        - made AnyEvent::IRC::Client connection object reusable.
        - documented that the 'heap' member of the AE::IRC::* objects
          can be used to store any data.

0.81    Mon Aug 10 09:43:29 CEST 2009
        - fixed some sample scripts.
        - added 'common::sense' to all the scripts and module files.

0.8     Fri Jun 26 15:29:06 CEST 2009
        - added enable_ssl to AnyEvent::IRC::Connection to enable
          TLS handshake after TCP connect.
        - added send event for hooking into sending a message.
        - Implemented DCC in AnyEvent::IRC::Client.
        - Implemented the DCC CHAT protocol.
        - fixed bug in AnyEvent::IRC::Client::nick_modes.
        - added dcc chat test.

0.7     Wed Jan 21 20:46:39 CET 2009
        - removed autocork hack, as AnyEvent ignores SIGPIPE now.
        - removed maintainer tests from distribution.
        - removed JSON dependency.

0.6     Tue Sep 23 14:41:43 CEST 2008
        - deprecated Net::IRC3, use this module in future!
        - connect is done non blocking
        - major semantic change: you can't reuse a connection object,
          after the 'disconnect' event has been issued you have to recreate
          it and reconnect the new object. All event handlers are cleared
          after the 'disconnect' event has been issued too.
        - major api change for channel_add and channel_remove
        - added CTCP support
        - implemented automatic pinging (on user request)
          see Net::IRC3::Client::Connection::enable_ping
        - Changed mk_msg, send_msg and send_srv and parse_irc_msg considerably,
          no reversed arguments anymore!