@@ -1,6 +1,7 @@
 Revision history for AnyEvent::IRC
 
 0.95
+        - added away_status method and events for tracking your away status.
         - implemented send_long_message.
         - added send_initial_whois option to ::Client constructor.
         - added dependency to Encode.
